--- a/src/app/pages/employees/employees.html
+++ b/src/app/pages/employees/employees.html
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li class="active col-offset-1">
-                <a ui-sref="employees.dashboard" href="">Dashboard</a>
-            </li>
-            <li class="col-offset-1">
-                <a ui-sref="employees.exist" href="">Exist</a>
-            </li>
-            <li class="col-offset-1">
-                <a href="#">Page 2</a>
-            </li>
-            <li>
-                <a href="#">Page 3</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div class="col-lg-12">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li ui-sref-active="active" class="active col-offset-lg-1">
+                    <a ui-sref="employees.dashboard" href="">Dashboard</a>
+                </li>
+                <li ui-sref-active="active" class="col-offset-lg-1">
+                    <a ui-sref="employees.exist" href="">Exist</a>
+                </li>
+                <li class="col-offset-1">
+                    <a href="#">Page 2</a>
+                </li>
+                <li>
+                    <a href="#">Page 3</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <div>
     <ui-view></ui-view>
 </div>
