--- a/src/app/pages/configuration/company/general/general.html
+++ b/src/app/pages/configuration/company/general/general.html
@@ -1,5 +1,11 @@
 <div class="panel">
+    <div class="panel-heading" dotranslate>
+        General Setting
+    </div>
     <div class="panel-body">
-        General
+        <span dotranslate>You can customize the login page using the setting here</span>
+        <br/>
+        <span dotranslate>create</span>
+        <p dotranslate>colsetting</p>
     </div>
 </div>
